--- a/library-backend/build.gradle
+++ b/library-backend/build.gradle
@@ -17,7 +17,10 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:junit-jupiter'
+    //MySQL
     testImplementation 'org.testcontainers:mysql'
+    //KeyCloak
+    testImplementation "com.github.dasniko:testcontainers-keycloak:3.4.0"
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     runtimeOnly 'com.mysql:mysql-connector-j'
