--- a/library-frontend/build.gradle
+++ b/library-frontend/build.gradle
@@ -1,6 +1,4 @@
-group = 'org.kergru'
-version = '0.0.1-SNAPSHOT'
-description = 'Reactive Library Client'
+description = 'Reactive Library Client with OAuth2 Client'
 
 apply plugin: 'org.springframework.boot'
 
@@ -10,14 +8,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    // OAuth2 Client
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     // Test dependencies
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    testImplementation 'org.springframework.security:spring-security-oauth2-jose'
-    testImplementation 'org.springframework.security:spring-security-oauth2-resource-server'
 
     // JUnit 5
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
@@ -26,15 +24,12 @@ dependencies {
     // Testcontainers
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
+    // Keycloak
     testImplementation 'com.github.dasniko:testcontainers-keycloak:3.8.0'
 
     // WireMock
     testImplementation "org.springframework.cloud:spring-cloud-contract-wiremock"
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-}
-
-test {
-    systemProperty "realm.import.dir", "${rootProject.projectDir}/docker/keycloak-init"
 }
 
